# core

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  Expansions.md  Ideas.md  Preserve.md  README.md  clippy.toml  rustfmt.toml
.cargo/: config.toml
.claude/agent-memory/bdd-tdd-spec-writer/: MEMORY.md  combat-wave-design-findings.md  effect-wave-design-findings.md  inv-wave-design-findings.md  movement-sim-design-findings.md
.claude/agent-memory/canon-guardian/: MEMORY.md  mu-core-context.md  review-standard.md  wcmb-canon-pins.md  weffect-canon-pins.md  wharden-canon-pins.md  winv-canon-pins.md  wmov-canon-pins.md
.claude/agent-memory/core-architecture-guardian/: MEMORY.md  project_file-decomposition-initiative.md
.claude/agent-memory/debt-guardian/: MEMORY.md  project_spatial_foundation_wave_boundaries.md  project_v2_rebuild_wave_boundaries.md  project_wcmb_combat_wave_boundaries.md  project_wharden_ban_scanner_coverage.md  project_winv_inventory_wave_boundaries.md
.claude/agent-memory/deep-module-guardian/: MEMORY.md  long-files-cohesion.md
.claude/agent-memory/rules-guardian/: MEMORY.md  sanctioned-result-collapse-and-narrow.md  sanctioned-test-harness-idioms.md  sanctioned-total-select-idiom.md  sanctioned-xtask-scanner-and-exemption.md  w-src-provenance-comment-convention.md
.claude/agent-memory/state-machine-agent/: MEMORY.md  weffect-state-machine-design.md
.claude/agents/: bdd-tdd-spec-writer.md  canon-guardian.md  core-architecture-guardian.md  debt-guardian.md  deep-module-guardian.md  prompt-optimizer.md  rules-guardian.md  state-machine-agent.md
.cursor/: mandatory.mdc
.githooks/: pre-commit
.github/workflows/: ci.yml
core/: Cargo.toml
core/src/: lib.rs
core/src/components/: active_effect.rs  bonus.rs  character_slot.rs  class.rs  collections.rs  combat_profile.rs  discovered_maps.rs  drop_claim.rs  element.rs  equipment.rs  geometry.rs  interval.rs  inventory.rs  item_instance.rs  item_options.rs  item_quality.rs  item_ref.rs  levels.rs  life.rs  mod.rs  movement.rs  party.rs  placement.rs  pool.rs  reputation.rs  spatial.rs  stats.rs  tile.rs  trade_window.rs  units.rs  unlocked_classes.rs  vitals.rs
core/src/data/: ancient_sets.rs  atlas.rs  box_drops.rs  chaos_mixes.rs  character_classes.rs  classes.rs  common.rs  drop_config.rs  drop_groups.rs  drop_pool.rs  effects.rs  exp_tables.rs  game_config.rs  game_constants.rs  gates_warps.rs  item_definitions.rs  item_level_bonus_tables.rs  item_options.rs  item_sets.rs  magic_effects.rs  map_definitions.rs  minigame.rs  mod.rs  monster_definitions.rs  npc_shops.rs  option_roll.rs  skills.rs  spawn_areas.rs  spawns.rs  special_drops.rs  stats.rs  terrain.rs
core/src/data/atlas/: check.rs  mod.rs  resolve.rs  views.rs
core/src/entities/: character.rs  minigame_session.rs  mod.rs  monster_instance.rs  party_session.rs  spawned.rs  trade_session.rs  world_item.rs  world_zen.rs
core/src/events/: account.rs  combat.rs  consume.rs  craft.rs  death.rs  effect.rs  ground.rs  inventory.rs  kill.rs  loot.rs  minigame.rs  mod.rs  monster_ai.rs  movement.rs  party.rs  progression.rs  reputation.rs  shop.rs  skills.rs  spawn.rs  trade.rs  travel.rs
core/src/rng/: mod.rs
core/src/services/: account.rs  chance.rs  combat.rs  consume.rs  craft.rs  creation.rs  death.rs  effects.rs  experience.rs  ground.rs  inventory.rs  item_roll.rs  item_rules.rs  kill.rs  loot.rs  mod.rs  monster_ai.rs  movement.rs  party.rs  price.rs  profile.rs  ratio.rs  reputation.rs  shop.rs  skills.rs  spawn.rs  trade.rs  travel.rs  wear.rs
core/src/services/minigame/: death.rs  entry.rs  lifecycle.rs  mod.rs  rewards.rs  scoring.rs  support.rs  waves.rs
core/tests/: account.rs  combat_simulation.rs  consume.rs  craft_integration.rs  creation.rs  data_files.rs  death.rs  effect_simulation.rs  equip_gate.rs  equipment_fold.rs  ground_lifecycle.rs  growth.rs  item_roll_integration.rs  minigame.rs  movement_simulation.rs  party_experience.rs  party_zen.rs  pvp.rs  reputation.rs  safezone.rs  shop_catalog.rs  shop_integration.rs  simulation.rs  skill_area.rs  skill_damage.rs  smoke.rs  trade_integration.rs  travel.rs  wasm_determinism.rs  wear.rs  wire_drift.rs
core/tests/common/: dataset.rs  mod.rs  paper_host.rs  rng.rs
data/: ancient_sets.json  box_drops.json  chaos_mixes.json  character_classes.json  classes.json  coverage_report.md  drop_groups.json  exp_tables.json  game_config.json  game_constants.json  gates_warps.json  item_definitions.json  item_level_bonus_tables.json  item_options.json  item_sets.json  magic_effects.json  map_definitions.json  monster_definitions.json  npc_shops.json  skills.json  spawn_areas.json  spawns.json  special_drops.json  stats.json
data/_coverage/: chaos_mixes.json  classes.json  constants_exp.json  drops.json  items.json  maps.json  monsters.json  options_sets.json  shops.json  skills-effects.json  stats.json
data/names/: ancient_sets.json  chaos_mixes.json  gates_warps.json  item_definitions.json  map_definitions.json  monster_definitions.json  skills.json
docs/: WORKPLAN.md  openmu-reference.md
docs/adr/: 0001-event-driven-core-shape.md
docs/debt/: DEBT-INDEX.md  combat-constants-provenance.md  excellent-drop-level-window.md  inventory-item-wave-followups.md  mob-step-speed-provenance.md  movement-flight-wave.md  openmu-default-values.md  poison-damage-balance.md  practices-transfer-quality.md  spatial-foundation-followups.md  worldspace-resolution-services.md
docs/reference/openmu-facts/: 0_character_stats_+_classes_+_attribute_sy.md  1_item_definitions_+_item_instances_+_stor.md  2_item_options_+_excellent_options_+_ancie.md  3_skills_+_magic_effects_+_skill_entries.md  (+3 more)
docs/specs/: 2026-07-02-data-schemas.md  2026-07-03-data-schemas-v2.md  2026-07-03-spatial-foundation.md
hosts/: README.md
tools/: fetch_openmu.sh
tools/extract/: chaos.py  classes.py  common.py  constants-exp.py  drops.py  items.py  maps.py  monsters.py  options-sets.py  shops.py  skills-effects.py  stat_map.json  stats.py  validate_refs.py
xtask/: Cargo.toml
xtask/src/: main.rs
