[workspace]
resolver = "2"
members = ["core", "xtask"]
# Hosts (game server, clients) are separate repos that embed mu-core; this
# workspace stays pure core and gains no host members (see hosts/README.md).
# mu-core never depends on a host.
#
# `xtask` is the repo's dev-tooling binary (the `cargo xtask` pattern). It is
# NOT part of mu-core and never enters its dependency graph: it omits
# `[lints] workspace = true`, so it does not inherit core's Iron-Law lints, and
# its `syn`/`walkdir` deps stay out of the pure library.

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
publish = false

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
# Portability rules (no wall-clock, no threads, no logging) are enforced
# mechanically via disallowed-types/methods/macros in clippy.toml.
pedantic = { level = "warn", priority = -1 }
# No type-system suppressors. CI runs -D warnings,
# making these build-failing. Tests are exempted in clippy.toml.
allow_attributes = "warn"
expect_used = "warn"
indexing_slicing = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
unreachable = "warn"
unwrap_used = "warn"
wildcard_enum_match_arm = "warn"
# Determinism: fixed-point only. Float arithmetic is
# non-associative and rounds differently across native/wasm/FFI, breaking the
# replay guarantee, so any float math is build-failing. (Declaring a bare float
# type is review-enforced — a disallowed-types entry for f32/f64 would
# false-positive on serde's derived visitors.)
float_arithmetic = "warn"
# Total ban on `as` casts, including the lossless ones pedantic permits. The
# codebase already converts exclusively through From/TryFrom at boundaries
# (0 `as` casts in core), so this is a zero-cost lock-in that keeps every
# numeric/pointer conversion an explicit, fallible boundary op.
as_conversions = "warn"
# Flags asymmetric operand groupings in binary expressions — the copy-paste
# transposition class (`a.x == b.x && a.x == b.y`). A real correctness guard in
# the formula-dense, determinism-critical fixed-point/stat math. Nursery, but
# effectively zero false-positive here (0 current hits).
suspicious_operation_groupings = "warn"
