[package]
name = "mu-core"
description = "Pure, host-agnostic game logic for the MU Online rewrite."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

# The ONLY allowed dependencies. Anything else breaks the portability
# contract (native server / SpacetimeDB module / browser wasm / Unity FFI).
[dependencies]
serde = { version = "1", features = ["derive"] }
rand_core = "0.9"

# Test-only. Dev-dependencies never reach the lib target, so they sit
# outside the portability contract — the library still depends only on
# serde + rand_core.
[dev-dependencies]
serde_json = "1"

# proptest is native-only: it transitively pulls `wait-timeout`, which does not
# build for `wasm32-wasip1`. Gating it out of the wasm test graph lets the
# dedicated cross-target determinism test (`tests/wasm_determinism.rs`, plain
# `#[test]`, no proptest) build and RUN under wasmtime — proving native and wasm
# produce bit-identical results — while the property tests run on the native
# legs. (Dev-deps never reach the lib target, so the portability contract is
# untouched either way.)
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
proptest = "1"

[lints]
workspace = true
